@@ -5,7 +5,7 @@ This file is generated! See scripts/docs_collector.py
 [[metricbeat-metricset-elasticsearch-index_summary]]
 === Elasticsearch index_summary metricset
 
-experimental[]
+beta[]
 
 include::../../../module/elasticsearch/index_summary/_meta/docs.asciidoc[]
 
