@@ -5,7 +5,7 @@ This file is generated! See scripts/docs_collector.py
 [[metricbeat-metricset-elasticsearch-shard]]
 === Elasticsearch shard metricset
 
-experimental[]
+beta[]
 
 include::../../../module/elasticsearch/shard/_meta/docs.asciidoc[]
 
