@@ -33,14 +33,14 @@ This file is generated! See scripts/docs_collector.py
 |<<metricbeat-module-dropwizard,Dropwizard>>  beta[]   |image:./images/icon-no.png[No prebuilt dashboards]    |  
 .1+| .1+|  |<<metricbeat-metricset-dropwizard-collector,collector>> beta[]  
 |<<metricbeat-module-elasticsearch,Elasticsearch>>  beta[]   |image:./images/icon-no.png[No prebuilt dashboards]    |  
-.8+| .8+|  |<<metricbeat-metricset-elasticsearch-index,index>> experimental[]  
-|<<metricbeat-metricset-elasticsearch-index_recovery,index_recovery>> experimental[]  
-|<<metricbeat-metricset-elasticsearch-index_summary,index_summary>> experimental[]  
-|<<metricbeat-metricset-elasticsearch-ml_job,ml_job>> experimental[]  
+.8+| .8+|  |<<metricbeat-metricset-elasticsearch-index,index>> beta[]  
+|<<metricbeat-metricset-elasticsearch-index_recovery,index_recovery>> beta[]  
+|<<metricbeat-metricset-elasticsearch-index_summary,index_summary>> beta[]  
+|<<metricbeat-metricset-elasticsearch-ml_job,ml_job>> beta[]  
 |<<metricbeat-metricset-elasticsearch-node,node>> beta[]  
 |<<metricbeat-metricset-elasticsearch-node_stats,node_stats>> beta[]  
-|<<metricbeat-metricset-elasticsearch-pending_tasks,pending_tasks>> experimental[]  
-|<<metricbeat-metricset-elasticsearch-shard,shard>> experimental[]  
+|<<metricbeat-metricset-elasticsearch-pending_tasks,pending_tasks>> beta[]  
+|<<metricbeat-metricset-elasticsearch-shard,shard>> beta[]  
 |<<metricbeat-module-etcd,Etcd>>  beta[]   |image:./images/icon-no.png[No prebuilt dashboards]    |  
 .3+| .3+|  |<<metricbeat-metricset-etcd-leader,leader>> beta[]  
 |<<metricbeat-metricset-etcd-self,self>> beta[]  
