@@ -2,6 +2,7 @@
   type: group
   description: >
     ml
+  release: beta
   fields:
     - name: id
       type: keyword
