@@ -53,7 +53,7 @@ type MetricSet struct {
 // New creates a new instance of the MetricSet. New is responsible for unpacking
 // any MetricSet specific configuration options if there are any.
 func New(base mb.BaseMetricSet) (mb.MetricSet, error) {
-	cfgwarn.Experimental("The elasticsearch pending_tasks metricset is experimental.")
+	cfgwarn.Beta("The elasticsearch pending_tasks metricset is beta.")
 
 	http, err := helper.NewHTTP(base)
 	if err != nil {
